--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@ body{
     background-image: url(/HTML_CSS/HW5/pic/man-7750139_1280.png);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 80vw;
+    margin: auto;
 }
 
 /* ------------- header ------------------- */
@@ -22,12 +23,12 @@ header{
     min-height: 20vh;
     display: flex;
     justify-content: flex-end;
-    padding: 10px 80px 0px 0px;
 }
 
 header nav{
     color: black;
     font-weight: 400;
+    padding-top: 1vh;
 }
 
 /* ------------- Construction ----------- */
@@ -120,7 +121,6 @@ footer{
     justify-content: center;
     align-items: center;
     border-top: 1px solid whitesmoke;
-    
 }
 
 footer p{
