--- a/style.css
+++ b/style.css
@@ -23,12 +23,18 @@ header{
     min-height: 20vh;
     display: flex;
     justify-content: flex-end;
+    align-items: flex-start;
 }
 
 header nav{
     color: black;
     font-weight: 400;
     padding-top: 1vh;
+    cursor: pointer;
+}
+
+header nav:hover{
+    text-decoration: underline;
 }
 
 /* ------------- Construction ----------- */
@@ -59,12 +65,14 @@ main .box{
     border: 1px solid rgba(0, 0, 0, 0.352);
     width: 300px;
     height: 12px;
+    cursor: wait;
 }
 
 main .box2{
     width: 75%;
     height: 100%;
     background-color: whitesmoke;
+    cursor: wait;
 }
 
 main .percent{
@@ -87,6 +95,8 @@ main .percent{
     padding: 4px 16px;
     background-color: whitesmoke;
     border-color: white;
+    box-shadow: 0px 12px 5px -6px rgba(0,0,0,0.41);
+    cursor: pointer;
 }
 
 /* ------------- contact ----------- */
