--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ main .box{
 main .box2{
     width: 75%;
     height: 100%;
-    background-color: whitesmoke;
+    background-color: burlywood;
     cursor: wait;
 }
 
@@ -93,8 +93,8 @@ main .percent{
 
 .notify button{
     padding: 4px 16px;
-    background-color: whitesmoke;
-    border-color: white;
+    background-color: burlywood;
+    border-color: wheat;
     box-shadow: 0px 12px 5px -6px rgba(0,0,0,0.41);
     cursor: pointer;
 }
