--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
     font-family: 'Poppins', sans-serif;
-    background-image: url(/HTML_CSS/HW5/pic/man-7750139_1280.png);
+    background-image: url(./pic/man-7750139_1280.png);
     background-size: cover;
     background-repeat: no-repeat;
     max-height: 100vh;
