--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ header{
 header nav{
     color: black;
     font-weight: 400;
-    padding-top: 1vh;
+    margin-top: 1vh;
     cursor: pointer;
 }
 
 header nav:hover{
-    text-decoration: underline;
+    background-color: wheat;
 }
 
 /* ------------- Construction ----------- */
@@ -121,6 +121,11 @@ main .percent{
     border: 2px solid;
     border-radius: 50%;
     margin: 0px 7px 7px 7px;
+}
+
+.circle:hover{
+    cursor: pointer;
+    box-shadow: 0px 1px 3px 4px rgba(0,0,0,0.5);
 }
 
 /* ------------- footer ----------- */
